# ESE650-Final-Project

deep_drifting/: .gitignore  eval.py  pyproject.toml  (+2 more)
state_observation/: CMakeLists.txt  package.xml  plot_data.ipynb  setup.cfg  setup.py  state_observation.csv
state_observation/config/: inference.yaml  sim.yaml  test.yaml
state_observation/launch/: drifting.launch.py
state_observation/rosbag2_2024_04_17-21_29_04/: metadata.yaml
state_observation/rosbags/: .gitignore  ESE 6500_ Rosbag Visualization.json  README.md
state_observation/rosbags/drifting_05_03-02_52_01/: metadata.yaml  rosbag2_2024_05_03-02_52_01_0.db3  rosbag2_2024_05_03-02_52_01_0.mcap
state_observation/rosbags/fast-rear-turn-left-4-24-0214/: fast-rear-turn-left-4-24-0214_0.db3  metadata.yaml
state_observation/rosbags/fast-rear-turn-right-4-24-0214/: fast-rear-turn-right-4-24-0214_0.db3  metadata.yaml
state_observation/rosbags/fast-turn-left-4-20-0003/: fast-turn-left-4-20-0003_0.db3  fast-turn-left-4-20-0003_0.mcap  metadata.yaml
state_observation/rosbags/fast-turn-left-4-20-0023/: fast-turn-left-4-20-0023_0.db3  metadata.yaml
state_observation/rosbags/fast-turn-left-4-24-0214/: fast-turn-left-4-24-0214_0.db3  metadata.yaml
state_observation/rosbags/fast-turn-right-4-24-0214/: fast-turn-right-4-24-0214_0.db3  metadata.yaml
state_observation/rosbags/fast-turns-4-24-0304/: fast-right-4-24-0304_0.db3  metadata.yaml
state_observation/scripts/: controller_node.py  convert_trt.py
state_observation/state_observation/: controller_node.py  convert_trt.py  state_publisher_node.py
(+93 files in other folders)
